Fix Copyright on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -466,7 +466,7 @@ table.ui-datepicker-calendar tbody td.highlight  a {   background: #c6c6c6;   co
 .contact .social ul li a:hover { color: #07cb79; }
 .contact .social h4 { color: #fff; text-transform: uppercase; }
 .contact .social p { color: #fff; display: block; margin-bottom: 30px; }
-.contact .powered { margin-top: 70px; display: block; }
+.contact .powered { margin-top: 40px; display: block; }
 .contact .powered ul li { display: inline-block; }
 .contact .powered ul li a { display: block; color: #ffffff; font-size: 16px; padding-right: 30px; }
 .contact .powered ul li a:hover { color: #26ade4; }
